# mnis_frontend

./: .gitignore  Cargo.toml
programming/rustWorkspace/target_dir/rls/debug/.fingerprint/adler-7f000af0653ca30c/: lib-adler  lib-adler.json
programming/rustWorkspace/target_dir/rls/debug/.fingerprint/adler-add25a44dcfc3e36/: lib-adler  lib-adler.json
programming/rustWorkspace/target_dir/rls/debug/.fingerprint/adler32-925e9b063efe6d07/: lib-adler32  lib-adler32.json
programming/rustWorkspace/target_dir/rls/debug/.fingerprint/autocfg-be8c76c81b8ffdd3/: lib-autocfg  lib-autocfg.json
programming/rustWorkspace/target_dir/rls/debug/.fingerprint/bitflags-960703bb163e5c46/: run-build-script-build-script-build  run-build-script-build-script-build.json
programming/rustWorkspace/target_dir/rls/debug/.fingerprint/bitflags-ffe42d3bf55aa33e/: build-script-build-script-build  build-script-build-script-build.json
programming/rustWorkspace/target_dir/rls/debug/.fingerprint/bytemuck-ae2726494fcddd54/: lib-bytemuck  lib-bytemuck.json
programming/rustWorkspace/target_dir/rls/debug/.fingerprint/byteorder-75156e7f9327bddf/: build-script-build-script-build  build-script-build-script-build.json
programming/rustWorkspace/target_dir/rls/debug/.fingerprint/byteorder-a6b1707e4b96216a/: run-build-script-build-script-build  run-build-script-build-script-build.json
programming/rustWorkspace/target_dir/rls/debug/.fingerprint/cc-56557074c42457a4/: lib-cc  lib-cc.json
programming/rustWorkspace/target_dir/rls/debug/.fingerprint/cfg-if-66feaf33d5a22924/: lib-cfg-if  (+1 more)
src/: main.rs
(+142 files in other folders)
